Backport revision 558902 from trunk:
SystemTimeToAprExpTime dayoffset summation is wrong, June is 30 days.

PR: 42953


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@559279 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,7 @@
 Changes with APR 0.9.15
 
-
+  *) Fix day of year (tm_day) calculation for July. The bug only affects
+     Windows builds.  PR 42953.  [Davi Arnaut]
 
 Changes with APR 0.9.14
 
