Call out the change to utf8 encoding
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@570295 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR 0.9.15
 
+  *) Define the Mac OS/X filesystem_encoding as utf-8 (in previous
+     releases the interpretation would vary).  [Branko Čibej]
+
   *) Fix day of year (tm_day) calculation for July. The bug only affects
      Windows builds.  PR 42953.  [Davi Arnaut]
 
