--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes with APR 0.9.16
+
+
+
 Changes with APR 0.9.15
 
   *) Solve winNT inherited pipe leaks by mutexing apr_proc_create calls,
