Not entirely empty; something happened
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@572468 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,11 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR 0.9.16
 
+  *) Win32 apr_file_read; Correctly handle completion-based read-to-EOF.
+     [Steven Naim <steven.naim googlemail.com>]
 
+  *) Fixed Win32 regression of StdOutput inheritance in apr_proc_create.
+     [William Rowe]
 
 Changes with APR 0.9.15
 
