We are at 0.9.17-dev
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@572471 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes with APR 0.9.17
+
+
+
 Changes with APR 0.9.16
 
   *) Win32 apr_file_read; Correctly handle completion-based read-to-EOF.
