--- a/CHANGES
+++ b/CHANGES
@@ -6,9 +6,9 @@ Changes with APR 0.9.17
 
   *) Revert Win32 to the 0.9.14 behavior of apr_proc_create() for any 
      of the three stdio streams which are not initialized, through either
-     apr_procattr_io_set() or apr_procattr_stdXXX_set(), when given a
+     apr_procattr_io_set() or apr_procattr_child_XXX_set(), when given a
      procattr_t with one or two streams which were initialized through
-     apr_procattr_stdXXX_set().  Once again, these do not inherit the 
+     apr_procattr_child_XXX_set().  Once again, these do not inherit the 
      parent process stdio stream to WIN32 child processes (passing 
      INVALID_HANDLE_VALUE instead) as on Unix.  Note APR 1.3.0 adopts 
      the unix behavior of inheriting any uninitialed streams as the 
