rev 593166 from trunk:
Fix DSO-related crash on z/OS caused by incorrect memory
allocation.

Submitted by: David Jones <oscaremma gmail.com>
Reviewed by:  trawick


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@593169 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR 0.9.17
 
+  *) Fix DSO-related crash on z/OS caused by incorrect memory
+     allocation.  [David Jones <oscaremma gmail.com>]
+
   *) Define apr_ino_t in such a way that it doesn't change definition
      based on the library consumer's -D'efines to the filesystem.
      [Lucian Adrian Grijincu <lucian.grijincu gmail.com>]
