--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,12 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.0
 
+  *) Implement apr_proc_wait_all_procs for windows.
+     The implementation uses tool help library present
+     on Windows 2000 and later. APR_ENOTIMPL is returned
+     on platforms missing tool help from kernel32.dll.
+     [Mladen Turk]
+
   *) Introduce apr_pool_pre_cleanup_register() for registering
      a cleanup that is called before any subpool is destroyed
      within apr_pool_clear or apr_pool_destroy.
