Support OS/X sendfile by using writev rather than the miscounted sendfile's hdtr iovecs.
Submitted by: Geoff Greer <angryparsley mipsisrisc.com>
Backports: r651395


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@651398 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.0
 
+  *) Support OS/X sendfile by using writev in lieu of hdtr vecs
+     miscounted by the OS.  [Geoff Greer <angryparsley mipsisrisc.com>]
+
   *) Implement apr_proc_wait_all_procs for windows.
      The implementation uses tool help library present
      on Windows 2000 and later. APR_ENOTIMPL is returned
