backport trunk rev 652951
apr_getservbyname(): Use proper method for converting port
to host byte order.

PR 44903.
Submitted by:  Chris Taylor <ctaylor wadeford.plus.com>
Reviewed by: trawick



git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@653244 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.0
 
+  *) apr_getservbyname(): Use proper method for converting port
+     to host byte order.  PR 44903.
+     [Chris Taylor <ctaylor wadeford.plus.com>]
+
   *) Use /dev/urandom in preference to /dev/random as entropy source
      for apr_generate_random_bytes.  PR 44881.  [Bojan Smojver]
 
