--- a/CHANGES
+++ b/CHANGES
@@ -8,9 +8,6 @@ Changes for APR 1.3.0
   *) Use /dev/urandom in preference to /dev/random as entropy source
      for apr_generate_random_bytes.  PR 44881.  [Bojan Smojver]
 
-  *) Support OS/X sendfile by using writev in lieu of hdtr vecs
-     miscounted by the OS.  [Geoff Greer <angryparsley mipsisrisc.com>]
-
   *) Implement apr_proc_wait_all_procs for windows.
      The implementation uses tool help library present
      on Windows 2000 and later. APR_ENOTIMPL is returned
@@ -47,7 +44,9 @@ Changes for APR 1.3.0
      allocation.  [David Jones <oscaremma gmail.com>]
 
   *) Implement Darwin-semantic (9.0.0 and later) sendfile support.
-     [William Rowe, Jim Jagielski]
+     Use writev in lieu of hdtr vecs since how Darwin counts the
+     data is undocumented. [Geoff Greer <angryparsley mipsisrisc.com>,
+     William Rowe, Jim Jagielski]
 
   *) Implemented the APR_FOPEN_SPARSE flag, permits win32 to create
      sparse data files.  Also bestow apr_fileinfo_t csize field for
