--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.0
 
+  *) Fix Solaris poll failure.  PR 43000
+     [Henry Jen <henryjen ztune.net>]
+
   *) apr_getservbyname(): Use proper method for converting port
      to host byte order.  PR 44903.
      [Chris Taylor <ctaylor wadeford.plus.com>]
