--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.1
+
+
+
 Changes for APR 1.3.0
 
   *) Fix Solaris poll failure.  PR 43000
