--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.2
+
+
+
 Changes for APR 1.3.1
 
   *) Fix win32 apr.hw to pick up XP/2003 TCP/IP multicast constants and
