--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,7 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.2
 
-
+  *) Fix getservbyname_r() detection.  [Ruediger Pluem]
 
 Changes for APR 1.3.1
 
