Backport r675117 from trunk
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@675448 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.3
 
+  *) Rename apr_pool_create_core to apr_pool_create_unmanaged and
+     deprecate the old API name. It better reflects the scope and usage
+     of this function. [Mladen Turk]
+
   *) Use proper return code for fcntl-based apr_proc_mutex_trylock() 
      on platforms that return EACCES instead of EAGAIN when the lock
      is already held (AIX, HP-UX).
