Document fix for PR 45513.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@684095 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,8 @@ Changes for APR 1.3.3
      is already held (AIX, HP-UX).
      [Eric Covener]
 
+  *) Fix APR_PID_T_FMT detection on Solaris.  PR 45513
+     [Rainer Jung <rainer.jung kippdata.de>]
 
 Changes for APR 1.3.2
 
