--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.4
+
+
+
 Changes for APR 1.3.3
 
   *) Rename apr_pool_create_core to apr_pool_create_unmanaged and
