--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.4
 
-
+  *) Win32: Do not error out on apr_pollset_poll() when there are no sockets.
+     [Justin Erenkrantz]
 
 Changes for APR 1.3.3
 
