Document apr_tokenize_to_argv fix.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@712632 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,9 @@ Changes for APR 1.3.4
   *) Win32: Do not error out on apr_pollset_poll() when there are no sockets.
      [Justin Erenkrantz]
 
+  *) Fix apr_tokenize_to_argv parsing.  PR 46128
+     [Edward Rudd <eddie omegaware.com>]
+
 Changes for APR 1.3.3
 
   *) Rename apr_pool_create_core to apr_pool_create_unmanaged and
