--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.4
 
+  *) Add AC_MSG_RESULT after AC_MSG_CHECKING.
+     PR 46427  [Rainer Jung <rainer.jung kippdata.de>]
+
   *) Reset errno to zero in apr_strtoi64 to prevent returning an errno not
      equal zero in cases where the operation worked fine. [Ruediger Pluem]
 
