--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.4
 
+  *) Fix documentation for apr_temp_dir_get().
+     PR 46303  [Carlo Marcelo Arenas Belon <carenas sajinet.com.pe>]
+
   *) Add AC_MSG_RESULT after AC_MSG_CHECKING.
      PR 46427  [Rainer Jung <rainer.jung kippdata.de>]
 
