--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.4
 
+  *) apr_socket_sendfile() on Solaris: Fix handling of files truncated
+     after the sender determines the length.  (This fixes a busy loop in 
+     httpd when a file being served is truncated.)  [Jeff Trawick]
+
   *) Fix documentation for apr_temp_dir_get().
      PR 46303  [Carlo Marcelo Arenas Belon <carenas sajinet.com.pe>]
 
