--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.4
 
+  *) Fix a bug with the APR_DELONCLOSE flag. Child processes were (also)
+     unlinking the file. [Greg Stein]
+
   *) Fix compilation error on systems that do not have IPV6.
      PR 46601 [Julien Charbon <jch 4js.com>]
 
