--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.4
 
+  *) Fix buildconf with libtool 2.2. [Joe Orton]
+
   *) Fix a bug with the APR_DELONCLOSE flag. Child processes were (also)
      unlinking the file. [Greg Stein]
 
