--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.4
 
+  *) Prefer glibtool1/glibtoolize1. [Jim Jagielski]
+
   *) Fix buildconf with libtool 2.2. [Joe Orton]
 
   *) Fix a bug with the APR_DELONCLOSE flag. Child processes were (also)
