--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.4
 
+  *) apr_strerror() on OS/2: Fix problem with calculating buffer size.
+     PR 45689.  [Erik Lax <apache datahack.se>]
+
   *) Prefer glibtool1/glibtoolize1. [Jim Jagielski]
 
   *) Fix buildconf with libtool 2.2. [Joe Orton]
