--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.5
+
+
+
 Changes for APR 1.3.4
 
   *) apr_strerror() on OS/2: Fix problem with calculating buffer size.
