--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.6
+
+
+
 Changes for APR 1.3.5
 
   *) Dropped kqueue and apr_poll detection from Mac OS/X 10.5/Darwin 9
