--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.7
+
+
+
 Changes for APR 1.3.6
 
   *) On Linux/hppa flock() returns EAGAIN instead of EWOULDBLOCK. This
