--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.7
 
-
+  *) More elaborate detection for dup3(), accept4() and epoll_create1().
+     [Chetan Reddy <chetanreddy gmail.com>, Bojan Smojver]
 
 Changes for APR 1.3.6
 
