--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.8
+
+
 Changes for APR 1.3.7
 
   *) More elaborate detection for dup3(), accept4() and epoll_create1().
