--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.8
 
+  *) Pass default environment to testflock and testoc children.
+     [Bojan Smojver]
 
 Changes for APR 1.3.7
 
