--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.8
 
-  *) Pass default environment to testflock and testoc children.
+  *) Pass default environment to testflock and testoc children, so that
+     tests run when APR is compiled with Intel C Compiler.
      [Bojan Smojver]
 
 Changes for APR 1.3.7
