correct missing NULL
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@800890 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,7 @@ Changes with APR 0.9.19
 
   *) SECURITY: CVE-2009-2412 (cve.mitre.org)
      Fix overflow in pools and rmm, where size alignment was taking place.
-     [Matt Lewis <mattlewis@google.com>, Sander Striker]
+     [Matt Lewis <mattlewis@google.com>, Sander Striker, William Rowe]
 
 Changes with APR 0.9.18
 
