--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.8
 
+  *) Make sure that "make check" is used in the RPM spec file, consistent
+     with apr-util. [Graham Leggett]
+
   *) SECURITY: CVE-2009-2412 (cve.mitre.org)
      Fix overflow in pools and rmm, where size alignment was taking place.
      [Matt Lewis <mattlewis@google.com>, Sander Striker]
