--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.9
+
+
+
 Changes for APR 1.3.8
 
   *) SECURITY: CVE-2009-2412 (cve.mitre.org)
