backport the following relatively simple Event Port fixes from trunk:
r749049
commentary, consistency, simplification, and minor fixes

impl_pollset_create():
. return the actual port_create() failure instead of APR_ENOMEM

impl_pollset_add():
. return the actual port_associate() failure instead of APR_ENOMEM

impl_pollset_poll():
. catch port_associate() failures
. don't report returned events to caller unless something popped
 besides the wakeup pipe

impl_pollcb_poll():
. fix incorrect mapping of EINTR onto APR_TIMEUP
. don't hide interesting error codes behind APR_EGENERAL

generally:
. axe redundant APR_RING_EMPTY() invocations
. don't check for EINTR explicitly, as it is handled appropriately
 by the apr_get_netos_error() invocation (IOW, EINTR == APR_EINTR here)

r749490 (only the port.c portion)
pollset tweaks:
 axe logic to set ignored conditions in the poll request structures
 (these conditions are return-only and are always reported when
 they occur)

r750279
don't lose track of a ring element when port_associate() fails

r754294 (only the port.c portion)
nelts, the number of elements in the pollset, was neither needed
nor properly maintained by these implementations, so axe the
related code

Additional, more complex fixes only in trunk at this point:
 r750277, r750708, r750744


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@806192 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.9
 
+  *) Fix error handling in the Solaris poll support (Event Port).  [Jeff
+     Trawick]
+
   *) Add the remainder of this fix from trunk:
      Fix Solaris poll failure.  PR 43000
      [Henry Jen <henryjen ztune.net>]
