backport r807263 from trunk:
Fix an error handling issue in the Event Port backend for APR pollsets.
(ETIME is sometimes reported along with an event.)

PR: 47645


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@807269 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.9
 
-  *) Fix error handling in the Solaris poll support (Event Port).  [Jeff
-     Trawick]
+  *) Fix error handling in the Solaris pollset support (Event Port backend).
+     PR 47645.  [Jeff Trawick]
 
   *) Add the remainder of this fix from trunk:
      Fix Solaris poll failure.  PR 43000
