--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.9
 
+  *) Pass default environment to testsock, testshm and testproc children, so
+     that tests run when APR is compiled with Intel C Compiler.
+     [Bojan Smojver]
+
   *) Fix error handling in the Solaris pollset support (Event Port backend).
      PR 47645.  [Jeff Trawick]
 
