Add comments describing the thread-safety properties of apr_pool_t. Submitted by: Neil Conway nrc cs.berkeley.edu
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@813080 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.9
 
+  *) Add comments describing the thread-safety properties of apr_pool_t.
+     [Neil Conway nrc cs.berkeley.edu]
+
   *) Pass default environment to testsock, testshm and testproc children, so
      that tests run when APR is compiled with Intel C Compiler.
      [Bojan Smojver]
