The implementation of expand_array() in tables/apr_hash.c allocatesi a new bucket array, without making any attempt to release the memory allocated for the previous bucket array. That wastes memory: if the hash table grows exponentially, this strategy wastes O(n) extra memory. Use a subpool instead. Submitted by: Neil Conway <nrc cs.berkeley.edu>
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/1.3.x@817810 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,11 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.10
 
-
+  *) The implementation of expand_array() in tables/apr_hash.c allocates
+     a new bucket array, without making any attempt to release the memory
+     allocated for the previous bucket array. That wastes memory: if the
+     hash table grows exponentially, this strategy wastes O(n) extra memory.
+     Use a subpool instead. [Neil Conway <nrc cs.berkeley.edu>]
 
 Changes for APR 1.3.9
 
