--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.11
+
+
+
 Changes for APR 1.3.10
 
   *) Avoid a redundant fcntl() call in apr_file_open() where O_CLOEXEC
