--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 1.3.11
 
-
+  *) Fix bad autoconf version number in messages from buildcheck.sh
+     (called from buildconf).  [Jeff Trawick]
 
 Changes for APR 1.3.10
 
