--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.12
+
+
+
 Changes for APR 1.3.11
 
   *) Fix bad autoconf version number in messages from buildcheck.sh
