--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,8 @@
                                                      -*- coding: utf-8 -*-
+Changes for APR 1.3.13
+
+
+
 Changes for APR 1.3.12
 
   *) Fix detection of some Linux variants when configure is built with
