--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,9 @@ Changes with APR 0.9.19
      Fix overflow in pools and rmm, where size alignment was taking place.
      [Matt Lewis <mattlewis@google.com>, Sander Striker, William Rowe]
 
+  *) Improve platform detection by updating config.guess and config.sub.
+     [Rainer Jung]
+
 Changes with APR 0.9.18
 
   *) z/OS: return standard apr_status_t codes from apr_dso_load()
