--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
                                                      -*- coding: utf-8 -*-
+Changes with APR 0.9.20
+
+
 Changes with APR 0.9.19
 
   *) SECURITY: CVE-2009-2412 (cve.mitre.org)
