Fix flag character '#' in combination with format character 'x' in apr snprintf implementations.
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@1152315 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR 0.9.20
 
+  *) Fix flag character '#' in combination with format character 'x' in
+     apr snprintf implementations.  [Rainer Jung]
 
 Changes with APR 0.9.19
 
