--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
                                                      -*- coding: utf-8 -*-
+Changes with APR 0.9.21
+
+
 Changes with APR 0.9.20
 
   *) Security: CVE-2011-0419
