Backport r1044440 from trunk to 0.9.x. Fix file_trunc for buffered files. Make sure the write buffer is flushed before truncate call
git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@1241176 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR 0.9.21
 
+  *) Flush write buffer before truncate call on a file.
+     [Mladen Turk]
+
   *) Security: oCERT-2011-003
      Randomise hashes by providing a seed.
      [Bojan Smojver, Branko Čibej, Ruediger Pluem et al.]
