Update config.guess and config.sub from http://git.savannah.gnu.org/cgit/config.git.
Backport of r1370494 from trunk,
r1370498 from 1.5.x resp. r1370500 from 1.4.x.


git-svn-id: https://svn.apache.org/repos/asf/apr/apr/branches/0.9.x@1370501 13f79535-47bb-0310-9956-ffa450edef68

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,9 @@
                                                      -*- coding: utf-8 -*-
 Changes with APR 0.9.21
 
+  *) Improve platform detection by updating config.guess and config.sub.
+     [Rainer Jung]
+
   *) Flush write buffer before truncate call on a file.
      [Mladen Turk]
 
